# aikit

./: .clippy.toml  .gitignore  .repomixignore  AGENTS.md  CLAUDE.md  CONTEXT-MAP.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TEST_SUMMARY.md  architecture.md  rustfmt.toml  test_results.json  test_results.md
.cargo/: config.toml
.config/: nextest.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  release-config.yml
ai-agent-deploy/: .gitignore  Cargo.toml  README.md
ai-agent-deploy/src/: lib.rs
ai-agent-deploy/tests/fixture/snapshots/: ai_agent_deploy__tests__all_agents_catalog_snapshot.snap
aikit-agent/: CONTRIBUTING.md  Cargo.toml  README.md
aikit-agent-codex/: .gitignore  Cargo.toml  README.md
aikit-agent-codex/examples/: chat.rs
aikit-agent-codex/src/: client.rs  error.rs  events.rs  lib.rs  protocol.rs
aikit-agent-codex/tests/: smoke.rs
aikit-agent/src/: agent_definition.rs  compression.rs  config.rs  context.rs  errors.rs  host_tools.rs  lib.rs  loop_runner.rs  skills.rs  subagents.rs  tools.rs
aikit-agent/src/llm/: gateway.rs  mock.rs  mod.rs  openai_compat.rs  stream.rs  types.rs
aikit-evals/: Cargo.toml
aikit-evals/src/: config.rs  lib.rs  runner.rs  scoring.rs  trace.rs
aikit-magictool/: Cargo.toml  README.md
aikit-magictool/src/: backend.rs  lib.rs  reference.rs
aikit-magictool/src/core/: executor.rs  mock.rs  mod.rs  registry.rs  tool.rs  validate.rs
aikit-magictool/src/http/: error.rs  handlers.rs  mod.rs  state.rs
aikit-magictool/tests/: e2e_multi_turn.rs  e2e_one_shot.rs
aikit-magictool/tests/common/: mod.rs
aikit-py/: CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
aikit-py/examples/: README.md  mcp_deploy_stdio.py
aikit-py/src/: lib.rs
aikit-py/tests/: test_aikit_py.py  test_mcp_deploy.py
aikit-sdk/: .repomixignore  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md
aikit-sdk/src/: agent_runner.rs  aikit_agent_adapter.rs  command_resolve.rs  fetch.rs  install.rs  lib.rs  manifest.rs  mcp_deploy.rs  paths.rs  pipeline.rs  report.rs  run_progress.rs  runner.rs  session_store.rs  template.rs  validation.rs
aikit-sdk/src/cost/: extract.rs  mod.rs
aikit-sdk/src/runner/: approval.rs  argv.rs  availability.rs  backend.rs  capabilities.rs  claude_session.rs  codex_session.rs  live_session.rs  mod.rs  normalize.rs  quota.rs  token_usage.rs  types.rs  usage.rs
aikit-sdk/src/runner/backends/: aikit.rs  argv_spec.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  quota_match.rs
aikit-sdk/src/runner/transport/: mod.rs  subprocess.rs
aikit-sdk/tests/: backend_parity.rs  builtin_agent_test.rs  docker_streaming_agents.rs  host_tool_provider_sdk_test.rs  manual_windows_agents.rs  mock_public_api.rs  run_agent_integration.rs  run_progress_test.rs  streaming_agents.rs
aikit-sdk/tests/docker/agents-stubs/: Dockerfile
aikit-sdk/tests/docker/agents-stubs/stubs/: agent  claude  codex  gemini  opencode
aikit-sdk/tests/fixture/snapshots/: aikit_sdk__tests__all_agents_catalog_snapshot.snap
aikit-sdk/tests/fixtures/recorded_case01/: README.md  claude.jsonl  codex.jsonl  cursor-agent.jsonl  gemini.jsonl  opencode.jsonl
aikit-sdk/tests/fixtures/streaming/: agent.jsonl  claude.jsonl  codex.jsonl  gemini.jsonl  opencode.jsonl
aikit-sdk/tests/snapshots/: run_progress_test__clear_resets_state_snapshot.snap  run_progress_test__multiple_events_sequence_snapshot.snap  run_progress_test__non_opencode_agent_fallback_snapshot.snap  run_progress_test__opencode_step_finish_error_shown_snapshot.snap  run_progress_test__opencode_step_finish_stop_suppressed_snapshot.snap  run_progress_test__opencode_step_start_suppressed_snapshot.snap  run_progress_test__opencode_text_event_snapshot.snap  run_progress_test__opencode_tool_use_failure_snapshot.snap  run_progress_test__opencode_tool_use_invalid_suppressed_snapshot.snap  run_progress_test__opencode_tool_use_no_exit_snapshot.snap  run_progress_test__opencode_tool_use_success_snapshot.snap  run_progress_test__raw_line_stderr_snapshot.snap  run_progress_test__raw_line_stdout_snapshot.snap  run_progress_test__ring_buffer_overflow_snapshot.snap  run_progress_test__token_footer_disabled_snapshot.snap  run_progress_test__token_footer_with_usage_snapshot.snap
aikit-session-capture/: Cargo.toml
aikit-session-capture/src/: adapter.rs  cursor_offset.rs  event_store.rs  homes.rs  lib.rs  mcp.rs  models.rs  registry.rs  scrub.rs  watch.rs
aikit-session-capture/src/claudecode/: mod.rs  transcript.rs
aikit-session-capture/src/codex/: mod.rs  transcript.rs
aikit-session-capture/src/opencode/: db.rs  mirror.rs  mod.rs
aikit-session-capture/tests/: opencode.rs  opencode_fixture.rs
aikit-session-capture/tests/fixtures/claudecode/: README.md  with-secrets.jsonl
aikit-session-capture/tests/fixtures/codex/: README.md  with-secrets.jsonl
aikit-session-sync/: Cargo.toml
aikit-session-sync/src/: engine.rs  key.rs  lib.rs  s3.rs  sink.rs  state.rs
aikit-session-sync/src/testdata/: test-ca.pem
aikit-session-sync/tests/: e2e_minio.rs  session_sync.rs
aikit-skillopt/: Cargo.toml
aikit-skillopt/src/: artifact.rs  lib.rs  prompts.rs
aikit-textgrad/: Cargo.toml
aikit-textgrad/src/: edit.rs  lib.rs
aikit-textgrad/src/training/: config.rs  epoch.rs  lr.rs  mod.rs  state.rs  step.rs
aikit-tools/: Cargo.toml
aikit-tools/src/: error.rs  handlers.rs  lib.rs  reference.rs  registry.rs  runner.rs  schema.rs  state.rs  tool.rs
coverage-report/: tarpaulin-report.html
coverage-report-all/: tarpaulin-report.html
docs/: GLOSSARY.md  TEMPLATE.MD  style-guide.md
examples/: README.md  install_newton_template.sh
scripts/: install-git-hooks.sh  run-tests.sh  security-check.sh
specs/: generalize.md  spec-kit_feature-inventory.md
src/: error.rs  git.rs  lib.rs  main.rs
tests/: cli_integration_test.rs  cli_parsing_test.rs  cli_session_persona_test.rs  e2e_package_publish.rs  e2e_workflow_test.rs  embed_cli_parity_test.rs  llm_test.rs  (+3 more)
(+194 files in other folders)
