[workspace]
members = [
    ".",
    "aikit-sdk",
    "aikit-py",
    "aikit-agent",
    "aikit-agent-codex",
    "aikit-evals",
    "aikit-magictool",
    "aikit-textgrad",
    "aikit-skillopt",
]

[package]
name = "aikit-cli"
version = "0.1.152"
edition = "2021"
authors = ["@aroff"]
description = "Multi-agent template package manager and CLI for aikit.toml packages; aikit-sdk provides the Rust gateway for catalog, deploy, and agent run APIs."
license = "Apache-2.0"
repository = "https://github.com/goaikit/aikit"
keywords = ["ai", "agents", "cli", "mcp", "catalog"]
categories = ["command-line-utilities"]

[[bin]]
name = "aikit"
path = "src/main.rs"

[lib]
name = "aikit"
path = "src/lib.rs"

[dependencies]
# CLI framework (replaces direct clap usage)
cli-framework = { git = "https://github.com/aroff/cli-framework", rev = "eaef0191a64faab76a27267567a0358b0c7af0e1", features = ["testkit", "mcp-server", "mcp-install", "api-server"] }
# HTTP server for aikit serve
axum = { version = "0.8", features = ["macros"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

# HTTP client for GitHub API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }


# ZIP archive handling
zip = "0.6.6"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI rendering
ratatui = "0.30"
crossterm = "0.29"

# Directory traversal
walkdir = "2"

# Tool detection
which = "8.0"

# aikit SDK (agent catalog and deploy)
# claude-control/codex-app-server enable bidirectional live-session bridges.
aikit-sdk = { path = "aikit-sdk", version = "0.3.0", features = ["claude-control", "codex-app-server"] }

# Magic-tool layer (optional; enabled by --features tools)
aikit-magictool = { path = "aikit-magictool", version = "0.1.0", optional = true, features = ["agent"] }

# Temporary directories
tempfile = "3.10"

# TTY detection
atty = "0.2"

# TOML parsing
toml = "1.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variable loading
dotenv = "0.15"

# Structured logging (spawn argv, run diagnostics)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# YAML frontmatter parsing
yaml-front-matter = "0.1"
serde_yaml = "0.9"
dirs = "6.0.0"
glob = "0.3.3"
urlencoding = "2.1.3"
regex = "1.10"
indicatif = "0.18"  # Progress bars
dialoguer = "0.12"  # Interactive prompts

# Vendor OpenSSL only for the musl cross-build. native-tls/openssl-sys is pulled
# in transitively (anthropic-sdk, cli-framework default features) even though
# every reqwest dep uses rustls-tls; on musl there is no system libssl-dev on
# the runner, so without vendored the cross-build fails. On Windows the vendored
# path needs perl/nasm and breaks, so we keep the system path there.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tempfile = "3.10"
which = "8.0"
assert_cmd = "2.0"
predicates = "3.0"

# Snapshot testing
insta = { version = "1.41", features = ["serde"] }

[[test]]
name = "aikit_serve"
path = "tests/snapshots/aikit_serve.rs"

[[test]]
name = "serve_smoke_test"
path = "tests/serve/serve_smoke_test.rs"

[[test]]
name = "serve_auth_test"
path = "tests/serve/serve_auth_test.rs"

[[test]]
name = "serve_limits_test"
path = "tests/serve/serve_limits_test.rs"

[[test]]
name = "serve_timeout_test"
path = "tests/serve/serve_timeout_test.rs"

[[test]]
name = "serve_disconnect_test"
path = "tests/serve/serve_disconnect_test.rs"

[features]
tools = ["dep:aikit-magictool"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
