[workspace]
members = [
    ".",
    "aikit-sdk",
    "aikit-py",
    "aikit-agent",
    "aikit-agent-codex",
    "aikit-evals",
    "aikit-magictool",
    "aikit-textgrad",
    "aikit-skillopt",
    "aikit-session-capture",
    "aikit-session-sync",
]

[package]
name = "aikit-cli"
version = "0.1.162"
edition = "2021"
authors = ["@aroff"]
description = "Multi-agent template package manager and CLI for aikit.toml packages; aikit-sdk provides the Rust gateway for catalog, deploy, and agent run APIs."
license = "Apache-2.0"
repository = "https://github.com/goaikit/aikit"
keywords = ["ai", "agents", "cli", "mcp", "catalog"]
categories = ["command-line-utilities"]

[[bin]]
name = "aikit"
path = "src/main.rs"

[lib]
name = "aikit"
path = "src/lib.rs"

[dependencies]
# CLI framework (replaces direct clap usage)
cli-framework = { git = "https://github.com/aroff/cli-framework", rev = "eaef0191a64faab76a27267567a0358b0c7af0e1", features = ["testkit", "mcp-server", "mcp-install", "api-server"] }
# HTTP server for aikit serve
axum = { version = "0.8", features = ["macros"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

# HTTP client for GitHub API
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls", "stream"] }


# ZIP archive handling
zip = "0.6.6"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI rendering
ratatui = "0.30"
crossterm = "0.29"

# Directory traversal
walkdir = "2"

# Tool detection
which = "8.0"

# Session capture (spec 010): on-disk adapter parsing for AI coding tools.
# Optional — pulled when `agent-adapters` feature is on.
aikit-session-capture = { path = "aikit-session-capture", version = "0.1.0", optional = true }
aikit-session-sync = { path = "aikit-session-sync", version = "0.1.0", optional = true }
# SQLite for the production EventStore/CursorStore (capture serve surface).
rusqlite = { version = "0.39", features = ["bundled"], optional = true }
# async trait for the EventStore/CursorStore impls.
async-trait = { version = "0.1", optional = true }

# aikit SDK (agent catalog and deploy)
# claude-control/codex-app-server enable bidirectional live-session bridges.
aikit-sdk = { path = "aikit-sdk", version = "0.3.0", features = ["claude-control", "codex-app-server"] }

# Magic-tool layer (optional; enabled by --features tools)
aikit-magictool = { path = "aikit-magictool", version = "0.1.0", optional = true, features = ["agent"] }

# Temporary directories
tempfile = "3.10"

# TTY detection
atty = "0.2"

# TOML parsing
toml = "1.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variable loading
dotenv = "0.15"

# Structured logging (spawn argv, run diagnostics)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# YAML frontmatter parsing
yaml-front-matter = "0.1"
serde_yaml = "0.9"
dirs = "6.0.0"
glob = "0.3.3"
urlencoding = "2.1.3"
regex = "1.10"
indicatif = "0.18"  # Progress bars
dialoguer = "0.12"  # Interactive prompts

# Vendor OpenSSL only for the musl cross-build. native-tls/openssl-sys is pulled
# in transitively (anthropic-sdk, cli-framework default features) even though
# every reqwest dep uses rustls-tls; on musl there is no system libssl-dev on
# the runner, so without vendored the cross-build fails. On Windows the vendored
# path needs perl/nasm and breaks, so we keep the system path there.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tempfile = "3.10"
which = "8.0"
assert_cmd = "2.0"
predicates = "3.0"

# Snapshot testing
insta = { version = "1.41", features = ["serde"] }

[[test]]
name = "aikit_serve"
path = "tests/snapshots/aikit_serve.rs"

[[test]]
name = "serve_smoke_test"
path = "tests/serve/serve_smoke_test.rs"

[[test]]
name = "serve_auth_test"
path = "tests/serve/serve_auth_test.rs"

[[test]]
name = "serve_limits_test"
path = "tests/serve/serve_limits_test.rs"

[[test]]
name = "serve_timeout_test"
path = "tests/serve/serve_timeout_test.rs"

[[test]]
name = "serve_disconnect_test"
path = "tests/serve/serve_disconnect_test.rs"

[[test]]
name = "serve_fail_closed_test"
path = "tests/serve/serve_fail_closed_test.rs"

[[test]]
name = "serve_timeout_cancel_test"
path = "tests/serve/serve_timeout_cancel_test.rs"

[[test]]
name = "serve_live_session_limits_test"
path = "tests/serve/serve_live_session_limits_test.rs"

[[test]]
name = "serve_signal_kill_test"
path = "tests/serve/serve_signal_kill_test.rs"

[[test]]
name = "serve_tool_policy_test"
path = "tests/serve/serve_tool_policy_test.rs"

[features]
tools = ["dep:aikit-magictool"]
# Session capture (spec 010): on-disk adapter parsing for AI coding tools.
# Pulls the adapter crate + SQLite storage + flips aikit-sdk capabilities.
agent-adapters = [
    "dep:aikit-session-capture",
    "dep:aikit-session-sync",
    "dep:rusqlite",
    "dep:async-trait",
    "aikit-sdk/agent-adapters",
]
claudecode = ["agent-adapters", "aikit-sdk/claudecode", "aikit-session-capture/claudecode", "aikit-session-sync/claudecode"]
codex = ["agent-adapters", "aikit-sdk/codex", "aikit-session-capture/codex", "aikit-session-sync/codex"]
opencode = ["agent-adapters", "aikit-sdk/opencode", "aikit-session-capture/opencode"]
# Watcher (spec 010 §14.5): notify-based fs watcher for automated capture.
watcher = ["aikit-session-capture/watcher", "aikit-session-sync/watcher"]
# MCP tools (spec 010 §15): registers check_file_freshness etc.
mcp-tools = ["aikit-session-capture/mcp-tools"]
# Crossmount (spec 010 §8/§19.3): WSL2 ↔ Windows home enumeration.
crossmount = ["aikit-session-capture/crossmount"]
default = ["claudecode", "codex", "opencode", "watcher"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
