[package]
name = "aikit-agent-codex"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Async Rust client for OpenAI Codex app-server JSON-RPC (stdio). Drives threads, turns, approvals, and streaming notifications."
repository = "https://github.com/goaikit/aikit"
keywords = ["openai", "codex", "app-server", "agent", "json-rpc"]
categories = ["api-bindings", "asynchronous"]

[lib]
name = "aikit_agent_codex"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
which = "8"

[[example]]
name = "chat"
path = "examples/chat.rs"

[[test]]
name = "smoke"
path = "tests/smoke.rs"
