[package]
name = "aikit-evals"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Evaluation runner infrastructure for aikit agents"
repository = "https://github.com/goaikit/aikit"
keywords = ["eval", "agent", "ai", "testing"]
categories = ["development-tools::testing"]

[dependencies]
aikit-sdk = { path = "../aikit-sdk", version = "0.3.0" }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros", "process"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
thiserror = "2.0"
base64 = "0.22"
num_cpus = "1.16"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
