[package]
name = "aikit-magictool"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Reusable magic-tool layer: one-shot and multi-turn LLM form-fill via a mountable axum router"
repository = "https://github.com/goaikit/aikit"

[features]
agent = ["dep:aikit-sdk"]

[dependencies]
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.46"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
tokio-stream = "0.1"

[dependencies.aikit-sdk]
path = "../aikit-sdk"
version = "0.3.0"
optional = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
