[package]
name = "aikit-py"
version = "0.1.50"
edition = "2021"
license = "Apache-2.0"
description = "Python bindings for aikit SDK"
repository = "https://github.com/goaikit/aikit"
keywords = ["ai", "agents", "deploy", "catalog", "capabilities", "python"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib"]

[features]
# `extension-module` is for wheels (maturin); `cargo test` omits it so libpython is linked (macOS dyld).
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
aikit-sdk = { path = "../aikit-sdk" }

[dev-dependencies]
insta = { version = "1.39", features = ["json"] }
tempfile = "3.12"
assert_cmd = "2.0"
