[build-system]
requires = ["maturin==1.0.0", "setuptools"]
build-backend = "maturin"

[project]
name = "aikit-py"
version = "0.1.50"
requires-python = ">=3.9"
license = "Apache-2.0"
description = "Python gateway to aikit-sdk: catalog, deploy, detection, run_agent, run_agent_events_py"
readme = "README.md"
authors = [
    { name = "goaikit", email = "info@goaikit.dev" }
]
keywords = ["ai", "agents", "deploy", "catalog", "capabilities", "python"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]

[tool.maturin]
module-name = "aikit_py"
features = ["extension-module"]

