[package]
name = "aikit-sdk"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust gateway: agent catalog, paths, deploy, detection, and run/event APIs for coding-agent CLIs"
repository = "https://github.com/goaikit/aikit"
keywords = ["ai", "agents", "deploy", "catalog", "capabilities"]
categories = ["command-line-utilities"]

[features]
default = ["claude-sdk"]
testing = []
# Delegate Claude decode to the typed `claude-agent-sdk` parser (richer
# tool/thinking frames). When off, a hand-rolled text-only decode is used.
claude-sdk = ["dep:claude-agent-sdk"]

[dependencies]
tracing = "0.1"
glob = "0.3"
walkdir = "2"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = "2.3"
tempfile = "3.12"
uuid = { version = "1", features = ["v4"] }
aikit-agent = { path = "../aikit-agent", version = "0.1.0" }
claude-agent-sdk = { git = "https://github.com/aroff/claude-agent-sdk-rust", rev = "717eacf", optional = true }
jsonschema = "0.46"

[dev-dependencies]
insta = { version = "1.39", features = ["json"] }
assert_cmd = "2.0"
mockito = "1.2"
serde_json = "1.0"
