[package]
name = "aikit-sdk"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust gateway: agent catalog, paths, deploy, detection, and run/event APIs for coding-agent CLIs"
repository = "https://github.com/goaikit/aikit"
keywords = ["ai", "agents", "deploy", "catalog", "capabilities"]
categories = ["command-line-utilities"]

[features]
default = ["claude-sdk"]
testing = []
# Delegate Claude decode to the typed `claude-agent-sdk` parser (richer
# tool/thinking frames). When off, a hand-rolled text-only decode is used.
claude-sdk = ["dep:claude-agent-sdk"]
# Bidirectional Claude sessions (B2): drive `claude-agent-sdk`'s client over a
# tokio bridge with a Control handle (interrupt / permission mode / model).
claude-control = ["claude-sdk", "dep:tokio"]
# Bidirectional Codex sessions: drive `aikit-agent-codex`'s app-server client
# (JSON-RPC over stdio) over a tokio bridge with a Control handle.
codex-app-server = ["dep:aikit-agent-codex", "dep:tokio"]
# Agent session capture (spec 010): passive on-disk session parsing for AI
# coding tools. Pulls the aikit-session-capture crate and flips the matching
# Backend `passive_capture` capability. Per-adapter features below gate the
# individual adapter modules so consumers can opt in to just Claude Code
# without dragging rusqlite (opencode) etc.
agent-adapters = ["dep:aikit-session-capture"]
claudecode = ["agent-adapters", "aikit-session-capture/claudecode"]
codex = ["agent-adapters", "aikit-session-capture/codex"]
opencode = ["agent-adapters", "aikit-session-capture/opencode"]

[dependencies]
tracing = "0.1"
glob = "0.3"
walkdir = "2"
toml = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = "2.3"
# Archive integrity hashing (SEC-7): SHA-256 of fetched package archives.
sha2 = "0.10"
tempfile = "3.12"
uuid = { version = "1", features = ["v4"] }
aikit-agent = { path = "../aikit-agent", version = "0.1.0" }
claude-agent-sdk = { git = "https://github.com/aroff/claude-agent-sdk-rust", rev = "717eacf", optional = true }
aikit-agent-codex = { path = "../aikit-agent-codex", version = "0.1.0", optional = true }
tokio = { version = "1", features = ["rt", "sync", "macros"], optional = true }
jsonschema = "0.48"
aikit-session-capture = { path = "../aikit-session-capture", version = "0.1.0", optional = true }

# Process-group signal escalation for run cancellation/timeout (ADR 0014,
# BUG-4): SIGTERM -> SIGKILL over the whole process group, not just the
# direct child. Unix-only; Windows job-object equivalent is noted follow-up.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal", "process"] }

[dev-dependencies]
insta = { version = "1.39", features = ["json"] }
assert_cmd = "2.0"
mockito = "1.2"
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "macros"] }
